NetBSD Problem Report #55104

From gson@gson.org  Tue Mar 24 08:16:26 2020
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C56F11A9213
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 24 Mar 2020 08:16:25 +0000 (UTC)
Message-Id: <20200324081621.2F504253F38@guava.gson.org>
Date: Tue, 24 Mar 2020 10:16:21 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: "eject -l cdrom" no longer works
X-Send-Pr-Version: 3.95

>Number:         55104
>Category:       kern
>Synopsis:       "eject -l cdrom" no longer works
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 24 08:20:00 +0000 2020
>Closed-Date:    Sun Apr 12 12:50:46 +0000 2020
>Last-Modified:  Sun Apr 12 12:50:46 +0000 2020
>Originator:     Andreas Gustafsson
>Release:        NetBSD 9.0
>Organization:

>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

With NetBSD 7.1, you could retract the disc tray of a typical desktop
SATA CD-ROM drive and close the drive door by running "eject -l cdrom".
This also happened automatically if you ran "cdrecord" from the
cdrtools package without manually closing the drive door first.

With NetBSD 9.0, this no longer works.  Running "eject -l cdrom"
with the drive tray extended gives the error message

  eject: open: /dev/rcd0d: Operation not supported by device

>How-To-Repeat:

Extend the disc tray of a CD-ROM drive having a motorized tray, either
by pressing the eject button or by running "eject cdrom", and then
attempt to retract it by running "eject -l cdrom".

>Fix:

>Release-Note:

>Audit-Trail:
From: Onno van der Linden <o.vd.linden@quicknet.nl>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55104: "eject -l cdrom" no longer works
Date: Tue, 24 Mar 2020 12:51:27 +0100

 >With NetBSD 7.1, you could retract the disc tray of a typical desktop
 >SATA CD-ROM drive and close the drive door by running "eject -l cdrom".
 >This also happened automatically if you ran "cdrecord" from the
 >cdrtools package without manually closing the drive door first.

 See kern/55046

 The eject command works fine for me.

 Onno

From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55104: "eject -l cdrom" no longer works
Date: Thu, 26 Mar 2020 09:15:20 +0200

 Looks like the problem started with this commit:

   2016.12.10.10.26.38 mlelstv src/sys/dev/files.dev 1.2
   2016.12.10.10.26.38 mlelstv src/sys/dev/scsipi/cd.c 1.334
   2016.12.10.10.26.38 mlelstv src/sys/dev/scsipi/cdvar.h 1.33
   2016.12.10.10.26.38 mlelstv src/sys/dev/scsipi/sd.c 1.320
   2016.12.10.10.26.38 mlelstv src/sys/dev/scsipi/sdvar.h 1.38

 -- 
 Andreas Gustafsson, gson@gson.org

From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org, gson@gson.org (Andreas Gustafsson)
Subject: re: kern/55104: "eject -l cdrom" no longer works
Date: Fri, 27 Mar 2020 16:04:24 +1100

 i've also seen this.  i had wondered if it was my cdrom
 dying or not, since it had been years since trying..

From: mlelstv@serpens.de (Michael van Elst)
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55104: "eject -l cdrom" no longer works
Date: Fri, 27 Mar 2020 08:01:51 -0000 (UTC)

 mrg@eterna.com.au (matthew green) writes:

 >i've also seen this.  i had wondered if it was my cdrom
 >dying or not, since it had been years since trying..

 Since netbsd-8 you cannot open the device without loaded medium.

 Working on it.

 -- 
 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55104 CVS commit: src/sys/dev/scsipi
Date: Fri, 27 Mar 2020 11:15:33 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Fri Mar 27 11:15:33 UTC 2020

 Modified Files:
 	src/sys/dev/scsipi: cd.c

 Log Message:
 Allow open of RAWPART even when no medium is loaded.
 Keep errors silent if no medium is loaded.

 Fixes PR kern/55104


 To generate a diff of this commit:
 cvs rdiff -u -r1.342 -r1.343 src/sys/dev/scsipi/cd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@netbsd.org
Cc: Michael van Elst <mlelstv@serpens.de>, Onno van der Linden <o.vd.linden@quicknet.nl>
Subject: Re: PR/55104 CVS commit: src/sys/dev/scsipi
Date: Fri, 27 Mar 2020 14:28:13 +0200

 Michael van Elst wrote:
 >  Fixes PR kern/55104
 >  
 >  To generate a diff of this commit:
 >  cvs rdiff -u -r1.342 -r1.343 src/sys/dev/scsipi/cd.c

 For the record, you also need:

 cvs rdiff -u -r1.129 -r1.130 src/sys/kern/subr_disk.c

 -- 
 Andreas Gustafsson, gson@gson.org

State-Changed-From-To: open->needs-pullups
State-Changed-By: gson@NetBSD.org
State-Changed-When: Fri, 27 Mar 2020 12:39:11 +0000
State-Changed-Why:
Confirmed fixed in 9.0 when both patches are applied.  Needs pullups to 8 and 9.


From: Onno van der Linden <o.vd.linden@quicknet.nl>
To: Andreas Gustafsson <gson@gson.org>
Cc: gnats-bugs@netbsd.org, Michael van Elst <mlelstv@serpens.de>
Subject: Re: PR/55104 CVS commit: src/sys/dev/scsipi
Date: Fri, 27 Mar 2020 13:40:02 +0100

 On Fri, Mar 27, 2020 at 02:28:13PM +0200, Andreas Gustafsson wrote:
 > Michael van Elst wrote:
 > >  Fixes PR kern/55104
 > >  
 > >  To generate a diff of this commit:
 > >  cvs rdiff -u -r1.342 -r1.343 src/sys/dev/scsipi/cd.c
 > 
 > For the record, you also need:
 > 
 > cvs rdiff -u -r1.129 -r1.130 src/sys/kern/subr_disk.c
 > 
 > -- 
 > Andreas Gustafsson, gson@gson.org

 And kern/55046 can be closed too.

 Onno

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55104 CVS commit: [netbsd-8] src/sys
Date: Sun, 29 Mar 2020 12:10:37 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Mar 29 12:10:37 UTC 2020

 Modified Files:
 	src/sys/dev/scsipi [netbsd-8]: cd.c
 	src/sys/kern [netbsd-8]: subr_disk.c

 Log Message:
 Pull up following revision(s) (requested by mlelstv in ticket #1527):

 	sys/dev/scsipi/cd.c: revision 1.343
 	sys/kern/subr_disk.c: revision 1.130

 Avoid division by zero if label isn't valid.
 Allow open of RAWPART even when no medium is loaded.
 Keep errors silent if no medium is loaded.
 Fixes PR kern/55104


 To generate a diff of this commit:
 cvs rdiff -u -r1.340.6.1 -r1.340.6.2 src/sys/dev/scsipi/cd.c
 cvs rdiff -u -r1.119.2.2 -r1.119.2.3 src/sys/kern/subr_disk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55104 CVS commit: [netbsd-9] src/sys
Date: Thu, 2 Apr 2020 19:15:35 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Apr  2 19:15:35 UTC 2020

 Modified Files:
 	src/sys/dev/scsipi [netbsd-9]: cd.c
 	src/sys/kern [netbsd-9]: subr_disk.c

 Log Message:
 Pull up following revision(s) (requested by mlelstv in ticket #814):

 	sys/dev/scsipi/cd.c: revision 1.343
 	sys/kern/subr_disk.c: revision 1.130

 Avoid division by zero if label isn't valid.

 Allow open of RAWPART even when no medium is loaded.
 Keep errors silent if no medium is loaded.

 Fixes PR kern/55104


 To generate a diff of this commit:
 cvs rdiff -u -r1.342 -r1.342.4.1 src/sys/dev/scsipi/cd.c
 cvs rdiff -u -r1.128 -r1.128.2.1 src/sys/kern/subr_disk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: needs-pullups->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Sun, 12 Apr 2020 12:50:46 +0000
State-Changed-Why:
Pullups done, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.