Pull up following revision(s) (requested by mlelstv in ticket #1527):

sys/dev/scsipi/cd.c: revision 1.343
	sys/kern/subr_disk.c: revision 1.130

Avoid division by zero if label isn't valid.
Allow open of RAWPART even when no medium is loaded.
Keep errors silent if no medium is loaded.
Fixes PR kern/55104